force-app/main/default/objects/App_Submission__c/App_Submission__c.object-meta.xml
<CustomObject>
    <description>submissions tie opportunities to lenders and track their status, denial reason, proposed terms, etc</description>
    <label>App Submission</label>
    <nameField>
        <displayFormat>SUB#{000000}</displayFormat>
        <label>Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>