force-app/main/default/objects/App_Submission__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Credit Score</fullName>
            </value>
            <value>
                <fullName>Inadequate Revenue</fullName>
            </value>
            <value>
                <fullName>Insufficient Collateral</fullName>
            </value>
            <value>
                <fullName>Past Due Balances</fullName>
            </value>
            <value>
                <fullName>Unapproved Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>