force-app/main/default/objects/App_Submission__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lender Account the opportunity was submitted to</description>
    <label>Lender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lender Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>