force-app/main/default/objects/App_Submission__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>opportunity this submission is tied to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>App Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>MasterDetail</type>
</CustomField>